# skytether-experiments

./: .gitattributes  .gitignore  README.md  meson.build
arrow-compute-inmem/: .gitattributes  README.md  meson.build
arrow-compute-inmem/resources/: E-GEOD-76312.48-2152.x300.feather
arrow-compute-inmem/resources/perf/: aggr_timing.x300.client.csv  aggr_timing.x300.device.csv
arrow-compute-inmem/src/: adapter_arrow.cpp  adapter_arrow.hpp  experiment.cpp  experiment.hpp  table_op.cpp  table_op.hpp
arrow-compute-projsel/: main.cpp  meson.build  project_from_dataset.cpp  recipe.cpp  recipe.hpp  storage.cpp  timing.cpp  timing.hpp
arrow-compute-tstat/src/: t-test.cpp
resources/results.old/tstat/: aggr_timing.x565.client.csv
resources/templates/: header.csv
src/cpp/: adapter_arrow.cpp  adapter_arrow.hpp  experiment_one.cpp  experiments.hpp  operators.cpp  operators.hpp  t-test.cpp  util_arrow.cpp  util_arrow.hpp
src/scripts/: run-tests.bash
